--- a/app/views/pages/link_sent.html.haml
+++ b/app/views/pages/link_sent.html.haml
@@ -1,6 +1,4 @@
-.alert.alert-success
-	%h1 
-		.alert-heading Link sent
-	%p
-		.mb-0 Please open your email application and click on the link to login.
+.container
+  %h1.mt-5 We sent you your link
+  .alert.alert-success Please open your email application and click on the link to login.
  
