--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,7 +24,7 @@
         balances: #{raw current_user.cached_balances_json}
       }
     - if Rails.env.production?
-      = javascript_include_tag "https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.min.js", integrity: 'sha256-FtWfRI+thWlNz2sB3SJbwKx5PgMyKIVgwHCTwa3biXc='
+      = javascript_include_tag "https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.min.js", integrity: 'sha256-FtWfRI+thWlNz2sB3SJbwKx5PgMyKIVgwHCTwa3biXc=', crossorigin: 'anonymous'
     - else
       = javascript_include_tag "https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"
     = javascript_include_tag 'application', integrity: true
