enable market orders in UI

--- a/app/views/orders/_form.html.haml
+++ b/app/views/orders/_form.html.haml
@@ -8,17 +8,32 @@
   = form.hidden_field :base_asset_id
   = form.hidden_field :quote_asset_id
   .row.form-group
-    = form.label :side, class: 'col-sm-2 col-form-label'
-    .col-sm-10
-      = form.select :side, [['Buy', 'buy'], ['Sell', 'sell']], {}, class: 'form-control', 'v-model' => 'side'
-  .row.form-group
-    = form.label :quantity, class: 'col-sm-2 col-form-label'
-    .col-sm-10
-      = form.text_field :quantity, class: 'form-control', 'v-model' => 'quantity'
-  .row.form-group
     = form.label :kind, class: 'col-sm-2 col-form-label'
     .col-sm-10
-      = form.select :kind, [['Market', 'market'], ['Limit', 'limit']], {}, class: 'form-control', 'v-model' => 'kind'
+      .btn-group.btn-group-toggle
+        .btn.btn-secondary(:class="{active: kind == 'limit'}" v-on:click="kind='limit'") Limit
+        .btn.btn-secondary(:class="{active: kind == 'market'}" v-on:click="kind='market'") Market
+  .row.form-group
+    = form.label :side, class: 'col-sm-2 col-form-label'
+    .col-sm-10
+      .btn-group.btn-group-toggle
+        .btn.btn-secondary(:class="{active: side == 'sell'}" v-on:click="side='sell'") Sell
+        .btn.btn-secondary(:class="{active: side == 'buy'}" v-on:click="side='buy'") Buy
+          
+  .row.form-group(v-if="side == 'buy' && kind == 'market'")
+    = form.label :total, class: 'col-sm-2 col-form-label'
+    .col-sm-10
+      .input-group
+        = form.text_field :total, class: 'form-control', 'v-model' => 'quantity'
+        .input-group-append
+          .input-group-text #{ order.quote_asset.symbol }
+  .row.form-group(v-else)
+    = form.label :quantity, class: 'col-sm-2 col-form-label'
+    .col-sm-10
+      .input-group
+        = form.text_field :quantity, class: 'form-control', 'v-model' => 'quantity'
+        .input-group-append
+          .input-group-text #{ order.base_asset.symbol }
   .row.form-group
     = form.label :rate, class: 'col-sm-2 col-form-label'
     .col-sm-10
