update balances screen

--- a/app/views/cached_balances/index.html.haml
+++ b/app/views/cached_balances/index.html.haml
@@ -11,7 +11,7 @@
             %th
           - for balance in @cached_balances
             %tr
-              %td= balance.asset.name
+              %td= link_to balance.asset.name, balance.asset
               %td= balance.total
               %td= balance.available
               %td
@@ -19,6 +19,6 @@
                 |  | 
                 = link_to 'Deposit', new_deposit_path(asset_id: balance.asset.id)
                 |  |
-                = link_to 'New Order', new_order_path(order: {base_asset_id: balance.asset.id})
+                = link_to 'Trade', new_order_path(order: {base_asset_id: balance.asset.id})
                 |  |
                 = link_to 'History', balance_adjustments_path(asset_id: balance.asset.id)
