--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -1,42 +1,64 @@
 .container
   %h1.mt-5 Buy/Sell #{ @order.base_asset.name }
-  #balance
-    %p Available #{ @order.base_asset.symbol }: {{ STATE.balances[base_asset_id] ? STATE.balances[base_asset_id].available : 0.0 }}
-    %p Available #{ @order.quote_asset.symbol }: {{ STATE.balances[quote_asset_id] ? STATE.balances[quote_asset_id].available : 0.0 }}
-  .card
+  #balances
+    %p Available #{ @order.base_asset.symbol }: {{ STATE.balances[baseAssetId] ? STATE.balances[baseAssetId].available : 0.0 }}
+    %p Available #{ @order.quote_asset.symbol }: {{ STATE.balances[quoteAssetId] ? STATE.balances[quoteAssetId].available : 0.0 }}
+  .card.mb-3
     .card-body
       = render 'form', order: @order
-  %h5.mt-3 Open orders
-  .card
-    .card-body
-      %table.table
-        %thead
-          %tr
-            %th Side
-            %th Asset
-            %th Market
-            %th= t '.quantity'
-            %th= t '.rate'
-            %th= t '.filled'
-            %th
-        %tbody
-          - @open_orders.each do |order|
+  
+  .card-deck
+    .card
+      .card-header Order book
+      .card-body
+        %table.table
+          %thead
             %tr
-              %td= order.side
-              %td= link_to order.base_asset.name, order.base_asset
-              %td= order.quote_asset.name
-              %td= order.quantity
-              %td= order.market? ? 'any' : order.rate
+              %th Side
+              %th= t '.quantity'
+              %th= t '.rate'
+              %th= t '.filled'
+              %th
+          %tbody
+            - @open_orders.each do |order|
+              %tr
+                %td= order.side
+                %td= order.quantity
+                %td= order.market? ? 'any' : order.rate
+                %td
+                  = order.percent_filled
+                  \%
+                %td
+                  - if order.user == current_user
+                    = link_to (t '.cancel'), order, method: 'delete'
+    .card#my_orders
+      .card-header My open orders
+      .card-body
+        %table.table
+          %thead
+            %tr
+              %th Side
+              %th= t '.quantity'
+              %th= t '.rate'
+              %th= t '.filled'
+              %th
+          %tbody
+            %tr(v-for="order in STATE.openOrders")
+              %td {{ order.side }}
+              %td {{ order.quantity }}
+              %td {{ order.rate }}
               %td
-                = order.percent_filled
-                \%
-              %td
-                - if order.user == current_user
-                  = link_to (t '.cancel'), order, method: 'delete'
+                %a(:href="`/orders/${order.id}`" data-method="delete" data-remote="true" rel="no-follow" data-confirm="really?") Cancel
+
 :coffeescript
   new Vue
-    el: '#balance'
+    el: '#balances'
     data: ->
       STATE: STATE
-      base_asset_id: #{ @order.base_asset_id }
-      quote_asset_id: #{ @order.quote_asset_id.to_i }
+      baseAssetId: #{ @order.base_asset_id }
+      quoteAssetId: #{ @order.quote_asset_id.to_i }
+
+  new Vue
+    el: '#my_orders'
+    data: ->
+      STATE: STATE
