orderbook realtime updates

--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -8,47 +8,43 @@
       = render 'form', order: @order
   
   .card-deck
-    .card
+    .card#open_orders
       .card-header Order book
       .card-body
         %table.table
           %thead
             %tr
-              %th Side
-              %th= t '.quantity'
-              %th= t '.rate'
-              %th= t '.filled'
+              %th Type
+              %th= t '.amount_left'
+              -# %th= t '.filled'
               %th
           %tbody
-            - @open_orders.each do |order|
-              %tr
-                %td= order.side
-                %td= order.quantity
-                %td= order.market? ? 'any' : order.rate
-                %td
-                  = order.percent_filled
-                  \%
-                %td
-                  - if order.user == current_user
-                    = link_to (t '.cancel'), order, method: 'delete'
+            %tr(v-for="order in openOrders.orderBy('rate')")
+              %td {{ order.side }} @ {{ order.kind == 'market' ? 'market' : order.rate }}
+              %td(v-if="order.kind == 'market' && order.side == 'buy'") {{ order.total - order.total_used }}
+              %td(v-else) {{ order.quantity - order.quantity_filled }}
+              -# %td {{ order.filled_percent }}%
+              %td
+
     .card#my_orders
       .card-header My open orders
       .card-body
         %table.table
           %thead
             %tr
-              %th Side
-              %th= t '.quantity'
-              %th= t '.rate'
+              %th Type
+              %th= t '.amount_left'
               %th= t '.filled'
               %th
           %tbody
-            %tr(v-for="order in STATE.openOrders")
-              %td {{ order.side }}
-              %td {{ order.quantity }}
-              %td {{ order.rate }}
+            %tr(v-for="order in STATE.openOrders.orderBy('rate')")
+              %td {{ order.side }} @ {{ order.kind == 'market' ? 'market' : order.rate }}
+              %td(v-if="order.kind == 'market' && order.side == 'buy'") {{ order.total - order.total_used }}
+              %td(v-else) {{ order.quantity - order.quantity_filled }}
+              %td(v-if="order.kind == 'market' && order.side == 'buy'") {{ Math.floor(100 * order.total_used / order.total) }}%
+              %td(v-else) {{ Math.floor(100 * order.quantity_filled / order.quantity) }}%
               %td
-                %a(:href="`/orders/${order.id}`" data-method="delete" data-remote="true" rel="no-follow" data-confirm="really?") Cancel
+                %a(:href="`/orders/${order.id}`" data-method="delete" data-remote="true" rel="no-follow") Cancel
 
 :coffeescript
   new Vue
@@ -57,6 +53,19 @@
       STATE: STATE
       baseAssetId: #{ @order.base_asset_id }
       quoteAssetId: #{ @order.quote_asset_id.to_i }
+  new Vue
+    el: '#open_orders'
+    subscriptions:
+      OrdersChannel:
+        params: ->
+          asset_ids: [#{ @order.base_asset_id }]
+        received: (message) ->
+          if (message.cancelled_at || message.filled_at)
+            @openOrders.delete(message)
+          else
+            @openOrders.upsert(message)
+    data: ->
+      openOrders: #{ raw @open_orders.to_json }
 
   new Vue
     el: '#my_orders'
