--- a/app/views/assets/show.html.haml
+++ b/app/views/assets/show.html.haml
@@ -41,3 +41,4 @@
   - if @asset.managable_by?(current_user)
     = link_to (t '.edit'), edit_asset_path(@asset), class: 'btn btn-primary'
     = link_to (t '.new_airdrop'), new_airdrop_path(airdrop: {asset_id: @asset.id}), class: 'btn btn-primary'
+    = link_to (t '.deposit'), new_deposit_path(asset_id: @asset.id), class: 'btn btn-primary'
